src/main/resources/Problems/p1/error.txt
  File "amir.p", line 1
    print(hello world );
                    ^
SyntaxError: invalid syntax
